--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "axios": "^0.21.1",
+    "node-sass": "^4.14.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "serve": "^11.3.2",
+    "sweetalert2": "^9.17.1",
+    "sweetalert2-react-content": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +41,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "jest-enzyme": "^7.1.2",
+    "redux-devtools": "^3.6.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
